linkagem dos arquivos css e js

--- a/sorteio.html
+++ b/sorteio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/sorteio.css">
     <title>Números do destino</title>
 </head>
 <body>
@@ -25,5 +26,8 @@
     <footer>
 <!-- adiciona qualquer coisa doida aqui só pra encher o site e ficar bonitinho -->
     </footer>
+    <script src="sorteio.js"> 
+    
+    </script>
 </body>
 </html>
