--- a/sorteio.html
+++ b/sorteio.html
@@ -31,7 +31,7 @@
             
         </div>
 
-        <script src="script.js"></script>
+        <script src="../assets/sorteio.js"></script>
     </main>
     <footer>
 
